Media queries added to fix on mobile

--- a/style.css
+++ b/style.css
@@ -9,10 +9,14 @@ body {
   color: white;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
+  width: 100%;
 }
 
 header {
   font-size: 1.5rem;
+}
+h1 {
+  text-align: center;
 }
 
 header,
@@ -154,5 +158,25 @@ select {
   h1 {
     font-size: 1.5rem;
     flex: 1;
+  }
+}
+@media screen and (max-width: 425px) {
+  form input {
+    display: block;
+    width: 90%;
+    font-size: 1rem;
+  }
+  form {
+    max-width: 100%;
+  }
+  h1 {
+    font-size: 1.5rem;
+    flex: 1;
+  }
+  .todo-item {
+    font-size: 1rem;
+  }
+  .todo {
+    font-size: 1rem;
   }
 }
